Update .gitignore with comprehensive Python and audio exclusions

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,50 @@
-﻿# Bytecode / caches
-__pycache__/
-*.pyc
-.ipynb_checkpoints/
-
-# Environments
-.venv/
-.env
-.env.*
-*.egg-info/
-
-# Data (keep repo light)
-data/raw/
-data/external/
-data/interim/
-data/processed/
-models/
-reports/
-mlruns/
-wandb/
-*.npy
-*.pth
-*.pt
-*.log
-
-# OS/editor
-.DS_Store
-Thumbs.db
-.vscode/
+.gitignore
+# Existing entries
+# new entries for Python, audio files, system files, and IDE configurations
+*.py[cod]
+*$py.class
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg
+.installed.cfg
+MANIFEST
+.pytest_cache/
+.coverage
+htmlcov/
+*.cover
+.hypothesis/
+*.mo
+*.pot
+local_settings.py
+instance/
+.webassets-cache
+.scrapy
+docs/_build/
+target/
+.python-version
+.celery*
+*.sage.py
+.spyderproject
+.spyproject
+.ropeproject
+*.swp
+*.swo
+*~
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.wav
+*.mp3
+*.flac
+*.ogg
