--- a/environment.yml
+++ b/environment.yml
@@ -4,18 +4,18 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.12
-  - numpy=1.26
-  - pandas=2.2
+  - python=3.9
+  - numpy
+  - pandas
   - pip
-  - pytorch=2.2
-  - torchaudio=2.2
-  - torchvision=0.17
-  - scikit-learn=1.5
-  - matplotlib=3.8
-  - seaborn=0.13
-  - tqdm=4.66
-  - pyyaml=6.0
+  - pytorch
+  - torchaudio
+  - torchvision
+  - scikit-learn
+  - matplotlib
+  - seaborn
+  - tqdm
+  - pyyaml
   - pip:
       - librosa==0.10.1
       - soundfile==0.12.1
