--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         python-version: 3.10
         auto-activate-base: false
         use-mamba: true
+        channels: conda-forge,defaults
     
     - name: Verify environment
       shell: bash -l {0}
