--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,24 +19,17 @@ jobs:
       with:
         python-version: '3.10'
     
-    - name: Set up Conda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        environment-file: environment.yml
-        activate-environment: bird-pam
-        python-version: 3.10
-        auto-activate-base: false
-        use-mamba: true
-        channels: conda-forge,defaults
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     
     - name: Verify environment
-      shell: bash -l {0}
       run: |
-        conda info
-        conda list
+        python --version
+        pip list
     
     - name: Check code style with flake8
-      shell: bash -l {0}
       run: |
         pip install flake8
         # Stop the build if there are Python syntax errors or undefined names
@@ -46,13 +39,11 @@ jobs:
       continue-on-error: true
     
     - name: Validate configuration files
-      shell: bash -l {0}
       run: |
         python -c "import yaml; yaml.safe_load(open('conf/config.yaml'))"
         echo "✅ config.yaml is valid"
     
     - name: Run pipeline checks
-      shell: bash -l {0}
       run: |
         # Check that key modules can be imported
         python -c "from src.features import melspec; print('✅ melspec module OK')"
@@ -60,7 +51,6 @@ jobs:
       continue-on-error: true
     
     - name: Run unit tests (if they exist)
-      shell: bash -l {0}
       run: |
         if [ -d "src/tests" ]; then
           python -m pytest src/tests/ -v
