--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,23 @@ jobs:
       with:
         python-version: '3.10'
     
+    - name: Runner disk and pip info
+      run: |
+        echo "=== Disk usage ==="
+        df -h .
+        echo "=== Home usage ==="
+        du -sh /home/runner || true
+        echo "=== pip info ==="
+        python -m pip --version
+        python -m pip cache info || true
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # Remove any existing pip cache to free disk space
+        python -m pip cache purge || true
+        # Use lightweight CI requirements to avoid downloading large GPU packages
+        python -m pip install --no-cache-dir -r requirements-ci.txt
     
     - name: Verify environment
       run: |
