Complete baseline CNN training pipeline
- Updated baseline model training with Google Colab notebook
- Completed Issue #2: Baseline CNN implementation and first training run
- Added train_on_colab.ipynb for GPU-accelerated training
- Created create_splits.py for generating stratified data splits
- Added download_xc_subset.py for Xeno-Canto dataset acquisition
- Updated model_card.md with baseline training results (28.5% train / 25.2% val)
- Enhanced .gitignore to protect local data and training outputs
- Added comprehensive test files for pipeline validation
- Documented windowing implementation and training guide
- Generated proper train/val/test splits (1058/226/229 recordings, 13 species)

Training Results:
- Baseline accuracy: 28.5% train / 25.2% val (3.5x better than random)
- Pipeline validated end-to-end on Google Colab T4 GPU
- No overfitting detected, good foundation for improvements

--- a/.gitignore
+++ b/.gitignore
@@ -32,14 +32,30 @@ data/raw/
 data/external/
 data/interim/
 data/processed/
+data/processed/mels/
 models/
 reports/
+outputs/
 mlruns/
 wandb/
 *.npy
 *.pth
 *.pt
 *.log
+*.json
+!conf/*.json
+!package*.json
+
+# Large datasets
+*.csv
+!conf/metadata.csv
+!conf/species_list.csv
+
+# Training outputs
+training_history.json
+training_curves.png
+best_model.pth
+checkpoint_*.pth
 
 # Audio files
 *.wav
